container for hashing success

--- a/Concepts/my_app/Dockerfile
+++ b/Concepts/my_app/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:carbon-alpine
-RUN MKDIR /my_app
+RUN mkdir -p /my_app
 COPY hashing.js /my_app
 COPY package.json /my_app
+WORKDIR /my_app
 RUN npm install
+CMD node hashing.js
